--- a/libsrc/scss/main_header.scss
+++ b/libsrc/scss/main_header.scss
@@ -100,7 +100,6 @@ $nav_size: 44px;
         box-sizing: border-box;
         display: inline-block;
         padding: 5px;
-        line-height: 0px;
     }
     .nav_top_row .right {
         float: right;
